[package]
name = "AOC_LIB"
version = "0.1.0"
edition = "2024"

[dependencies]
cookie = "0.18.1"
itertools = "0.14.0"
reqwest = { version = "0.12.24", features=["cookies"]}
reqwest_cookie_store = "0.9.0"
serde = "1.0.228"
serde_derive = "1.0.228"
soup = "0.5.1"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"