[package]
name = "AOC_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cookie = "0.18.1"
itertools = "0.14.0"
reqwest = { version = "0.12.24", features=["cookies"]}
reqwest_cookie_store = "0.9.0"
serde = "1.0.228"
serde_derive = "1.0.228"
soup = "0.5.1"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
pathfinding = "4.14.0"
petgraph = { version = "0.8.3", features = ["all", "serde"] }
ndarray = "0.17.1"
memoize = "0.5.1"
image = "0.25.9"
imageproc = "0.25.0"
svg = "0.18.0"
rand = "0.9.2"
